Fri Nov 20 08:45:52 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Log_Msg.cpp:
          Updated documentation for '%S' modifier.

Fri Nov 20 07:06:04 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Sig_Handler.cpp:
          Reverted: Sun Nov  1 16:47:29 UTC 2009  Olli Savia  <ops@iki.fi>

Thu Nov 19 14:08:29 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Sig_Handler.cpp:
          Reverted: Mon Nov  2 08:36:24 UTC 2009  Olli Savia  <ops@iki.fi>

Wed Nov 19 09:45:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h:
          Only define FILE_MAP_COPY when it is not defined yet

Mon Nov 16 14:40:42 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_win32_interix.GNU:
        * ace/config-win32-interix.h:
        * ace/os_include/sys/os_types.h:
          Updated Interix support.

Sun Nov 15 08:09:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debianbuild/*:
          Renamed all files for x.7.4

Fri Nov 13 19:38:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Sys::Hostname shouldn't be used in a test script, use HostName on
          the test target instead

Fri Nov 13 01:54:01 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_common.GNU:
        * include/makeinclude/platform_macosx_snowleopard.GNU:

          Added support for buildbits=universal for building 32/64 bit
          universal binaries with GCC.

Fri Nov 13 01:12:33 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * include/makeinclude/platform_macosx_common.GNU:

          Fixed 32 bit support.

Fri Nov 13 00:33:49 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * ace/Logging_Strategy.h:
        * ace/Logging_Strategy.cpp:

          Added static service declaration and definition to fix loading
          issue in TAO Service (e.g Notify) in static builds.
