@@ -2305,6 +2305,8 @@ Marijke Hengstmengel <mhengstmengel at remedy dot nl>
 Christian Freund <freund at wrz dot de>
 Chris Shaw <google at cshaw-tech dot co dot uk>
 Matthew Carter <r_q_einstein-acetaobugs at yahoo dot com>
+Denis Budko <denis dot budko at remedy dot nl>
+Gaurav Kulshreshtha <gaurav dot kulshreshtha at onmobile dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
