@@ -1,3 +1,11 @@
+Thu Nov 19 20:29:57 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * ace/Log_Msg_NT_Event_Log.cpp (ACE_Log_Msg_NT_Event_Log::log):
+          Added checks to ensure that log() works properly if the msg_data
+          size is greater than ACE_Log_Record::MAXLOGMSGLEN.  Thanks to
+          Gaurav Kulshreshtha <gaurav dot kulshreshtha at onmobile dot
+          com> for contributing this fix.
+
 Fri Nov 20 08:45:52 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * ace/Log_Msg.cpp:
